Scrollbar fixes
git-svn-id: https://wush.net/svn/mindalliance@953 baad322d-9929-0410-88f0-f92e8ff3e1bd

--- a/playbook/trunk/src/main/webapp/playbook.css
+++ b/playbook/trunk/src/main/webapp/playbook.css
@@ -29,7 +29,17 @@ div.title {
 }
 
 div#tab-content {
+    position: absolute;
+    top: 105px;
+    bottom: 5px;
+    left: 5px;
+    right: 0;
+}
+
+div#tab-content > div {
     position: relative;
+    height: 100%;
+    width: 100%;
 }
 
 div.tab-left {
@@ -39,7 +49,7 @@ div.tab-left {
 }
 
 div.tab-left p {
-    margin-top: 5px;
+    margin: 5px;
     text-align: right;
 }
 
@@ -47,8 +57,10 @@ div.tab-right {
     left: 20.5em;
     right: 0;
     top: 0;
+    bottom: 0;
     position: absolute;
     vertical-align: top;
+    padding: 0 5px 0 0;
 }
 
 div.tab-right > div.tab-panel {
@@ -61,14 +73,32 @@ div.content-list {
 
 div#filter {
     margin: 0 0 5px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20em;
+    bottom: 3.5em;
+}
+
+div#filter > form {
+    height: 94%;
+    margin: 3px 0 0;
+    overflow: auto;
+    position: relative;
+    width: 100%;
 }
 
 div#links {
     margin: 0 0 5px 0;
+    position: absolute;
+    width: 20em;
+    height: 3em;
+    left: 0;
+    bottom: 0;
 }
 
 div#links ul {
-    margin: 0 5px;
+    margin: 5px;
     list-style: none;
 
 }
@@ -85,6 +115,22 @@ div#links ul li {
 
 .wide {
     width: 100%;
+}
+
+div.content-form {
+}
+
+div#graph {
+    overflow: auto;
+    width: 100%;
+    max-height: 25em;
+}
+
+div#graph-controls {
+    left: 0;
+    position: absolute;
+    top: 2em;
+    width: 5em;
 }
 
 /* ----------------- Fonts */
@@ -145,6 +191,10 @@ th, h1, div.content-footer, div.tab-left h3, div.tab-row li, div.list-type li {
 body, div.content-list {
     background-color: white;
     color: black;
+}
+
+div#everything {
+    background-color: #f2f2f2;
 }
 
 /* ----------------- Forms */
@@ -259,27 +309,11 @@ div.wicket-tree div.a_ {
 div.wicket-tree div.a_ > div {
 }
 
- div.wicket-tree div.a_ input {
+div.wicket-tree div.a_ input {
      float: right;
      margin: 3px 5px 0;
 }
 
-#todos input[type='text'] {
-}
-#todos input[ type='submit' ], #todos input[ type='button' ] {
-    border: none;
-    background-color: transparent;
-    text-align: right;
-}
-td.todo-new {
-    padding: 0 2px;
-    text-align: right;
-}
-
-#todos tr {
-}
-#todos td {
-}
 /* ----------------- Actual Tables */
 table {
     width: 100%;
